--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,54 @@
 
 *.qws
 *.db_info
+*.qarlog
+*.rpt
+*.summary
+*.done
+*.cdb
+*.logdb
+*.hif
+*.ddb
+*.bpm
+*.hdb
+*.cdb
+*.kpt
+*.html
+*.xml
+*.summary
+*.qws
+*.bak
+*.cdb
+*.hdb
+*.qmsg
+*.bpm
+*.dat
+*.hif
+*.hier_info
+*.xml
+*.ammdb
+*.qarlog
+*.rpt
+*.cdf
+*.done
+*.summary
+*.rpt
+*.qsf
+*.cdb
+*.hdb
+*.hdb
+*.cdb
+*.cdb
+*.hdb
+*.qarlog
+lab1_template_de1soc/db/Basic_Organ_Solution.(2).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(20).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(20).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(21).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(22).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(22).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(23).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(23).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(24).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(24).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(25).cnf.cdb
