--- a/.gitignore
+++ b/.gitignore
@@ -315,3 +315,4 @@ lab1_template_de1soc/db/Basic_Organ_Solution.(22).cnf.cdb
 lab1_template_de1soc/db/Basic_Organ_Solution.(21).cnf.cdb
 lab1_template_de1soc/db/Basic_Organ_Solution.(20).cnf.hdb
 lab1_template_de1soc/db/Basic_Organ_Solution.(20).cnf.cdb
+*.bak
