--- a/.gitignore
+++ b/.gitignore
@@ -316,3 +316,4 @@ lab1_template_de1soc/db/Basic_Organ_Solution.(21).cnf.cdb
 lab1_template_de1soc/db/Basic_Organ_Solution.(20).cnf.hdb
 lab1_template_de1soc/db/Basic_Organ_Solution.(20).cnf.cdb
 *.bak
+*.sof
