--- a/.gitignore
+++ b/.gitignore
@@ -319,3 +319,113 @@ lab1_template_de1soc/db/Basic_Organ_Solution.(20).cnf.cdb
 *.sof
 *.qarlog
 *.rpt
+*.cdb
+*.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(0).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(0).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(1).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(1).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(10).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(10).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(11).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(11).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(12).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(12).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(13).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(13).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(14).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(14).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(15).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(15).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(16).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(16).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(17).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(17).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(18).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(18).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(19).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(19).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(2).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(2).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(20).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(20).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(21).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(21).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(22).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(22).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(23).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(23).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(24).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(24).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(25).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(25).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(26).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(26).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(27).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(27).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(28).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(28).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(29).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(29).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(3).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(3).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(30).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(30).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(31).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(31).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(32).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(32).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(33).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(33).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(34).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(34).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(35).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(35).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(36).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(36).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(37).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(37).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(38).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(38).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(39).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(39).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(4).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(4).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(40).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(40).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(41).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(41).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(42).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(42).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(43).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(43).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(44).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(44).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(45).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(45).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(46).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(46).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(47).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(47).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(48).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(48).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(49).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(49).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(5).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(5).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(50).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(50).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(51).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(51).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(52).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(52).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(53).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(53).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(6).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(6).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(7).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(7).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(8).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(8).cnf.hdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(9).cnf.cdb
+lab1_template_de1soc/db/Basic_Organ_Solution.(9).cnf.hdb
