--- a/.gitignore
+++ b/.gitignore
@@ -429,3 +429,5 @@ lab1_template_de1soc/db/Basic_Organ_Solution.(8).cnf.cdb
 lab1_template_de1soc/db/Basic_Organ_Solution.(8).cnf.hdb
 lab1_template_de1soc/db/Basic_Organ_Solution.(9).cnf.cdb
 lab1_template_de1soc/db/Basic_Organ_Solution.(9).cnf.hdb
+*.qarlog
+*.hdb
