--- a/.gitignore
+++ b/.gitignore
@@ -441,3 +441,4 @@ lab1_template_de1soc/db/Basic_Organ_Solution.(9).cnf.hdb
 *.rpt
 Basic_Organ_Solution (old file) (2).v
 Basic_Organ_Solution (old file).v
+*.qarlog
