--- a/.gitignore
+++ b/.gitignore
@@ -442,3 +442,4 @@ lab1_template_de1soc/db/Basic_Organ_Solution.(9).cnf.hdb
 Basic_Organ_Solution (old file) (2).v
 Basic_Organ_Solution (old file).v
 *.qarlog
+notes.txt
