--- a/.gitignore
+++ b/.gitignore
@@ -487,3 +487,4 @@ HW1/Q7/work/_vmake
 LAB#1/lab1_template_de1soc/work/_info
 HW2/Q2/work/_info
 HW2/Q2/work/_vmake
+template_de1soc/db/lcd_scope_auto_stripped.stp
