--- a/.gitignore
+++ b/.gitignore
@@ -488,3 +488,4 @@ LAB#1/lab1_template_de1soc/work/_info
 HW2/Q2/work/_info
 HW2/Q2/work/_vmake
 template_de1soc/db/lcd_scope_auto_stripped.stp
+template_de1soc/edge detector/work/_info
