--- a/.gitignore
+++ b/.gitignore
@@ -489,3 +489,4 @@ HW2/Q2/work/_info
 HW2/Q2/work/_vmake
 template_de1soc/db/lcd_scope_auto_stripped.stp
 template_de1soc/edge detector/work/_info
+template_de1soc/StmTest/work/_info
