--- a/.gitignore
+++ b/.gitignore
@@ -493,3 +493,4 @@ template_de1soc/StmTest/work/_info
 template_de1soc/StmTest/work/_vmake
 template_de1soc/simple_ipod_solution.pin
 template_de1soc/db/simple_ipod_solution_tmp_qic_import/qic_export_file_list
+template_de1soc/db/ip/sldcdeaedfc/alt_sld_fab.sopcinfo
