--- a/.gitignore
+++ b/.gitignore
@@ -497,3 +497,5 @@ template_de1soc/db/ip/sldcdeaedfc/alt_sld_fab.sopcinfo
 template_de1soc/incremental_db/README
 HW2/Q3/work/_info
 HW2/Q3/work/_vmake
+HW2/Q1/work/_info
+HW2/Q1/work/_vmake
