--- a/.gitignore
+++ b/.gitignore
@@ -502,3 +502,244 @@ HW2/Q1/work/_vmake
 HW3/PART_B/work/_info
 HW3/PART_B/work/_vmake
 HW3/work/_info
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze3m.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze3m_tb.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze3m_xst.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze_alu.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze_dregister.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze_dregister_tb.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze_idu.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze_idu_tb.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze_inc.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze_register.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze_scratch.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze_stack.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze_util.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/test.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/testall.sh
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/timescale_inc.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/uclock.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/uclock_ti.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/adc_ctrl.psm
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/adc_ctrl.rmh
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/adc_ctrl_rom.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/auto_pwm.psm
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/auto_pwm.rmh
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/auto_pwm_rom.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/clock.psm
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/clock.rmh
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/clock_rom.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/control.psm
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/control.rmh
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/control_rom.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/dac_ctrl.psm
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/dac_ctrl.rmh
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/dac_ctrl_rom.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/fc_ctrl.psm
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/fc_ctrl.rmh
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/fc_ctrl_rom.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/fg_ctrl.psm
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/fg_ctrl.rmh
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/fg_ctrl_rom.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/int_test.psm
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/int_test.rmh
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/int_test2.psm
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/int_test2.rmh
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/int_test2.vhd
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/int_test2_rom.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/int_test_rom.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/led_ctrl.psm
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/led_ctrl.rmh
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/led_ctrl_rom.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/ls_test.psm
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/ls_test.rmh
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/ls_test_rom.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/Makefile
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/pb3_int.psm
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/pb3_int.rmh
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/pb3_int_rom.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/pb3_ret.psm
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/pb3_ret.rmh
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/pb3_ret_rom.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/pb3_test.psm
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/pb3_test.rmh
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/pb3_test_rom.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/pb3m_test.psm
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/pb3m_test.rmh
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/pb3m_test_rom.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/progctrl.psm
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/progctrl.rmh
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/progctrl_rom.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/pwm_ctrl.psm
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/pwm_ctrl.rmh
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/pwm_ctrl_rom.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/security.psm
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/security.rmh
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/security_rom.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/sha1prog.psm
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/sha1prog.rmh
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/sha1prog_rom.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/spi_prog.psm
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/spi_prog.rmh
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/spi_prog_rom.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/test3.psm
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/test3.rmh
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/test3_rom.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/testint.psm
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/testint.rmh
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/testint_rom.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/testsub.psm
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/testsub.rmh
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/testsub_rom.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/uclock.psm
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/uclock.rmh
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/test/uclock_rom.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/xilinx/kcpsm2.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/xilinx/kcpsm3.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/xilinx/unisims/FD.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/xilinx/unisims/FDE.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/xilinx/unisims/FDR.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/xilinx/unisims/FDRE.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/xilinx/unisims/FDRSE.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/xilinx/unisims/FDS.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/xilinx/unisims/glbl.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/xilinx/unisims/INV.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/xilinx/unisims/LUT1.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/xilinx/unisims/LUT2.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/xilinx/unisims/LUT3.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/xilinx/unisims/LUT4.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/xilinx/unisims/MUXCY.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/xilinx/unisims/MUXF5.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/xilinx/unisims/RAM16X1D.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/xilinx/unisims/RAM32X1S.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/xilinx/unisims/RAM64X1S.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/xilinx/unisims/XORCY.v
+old files lab 3/LAB#3/PicoBlaze_activity.pdf
+old files lab 3/LAB#3/picoblaze_activity_template_de2.zip
+old files lab 3/LAB#3/PicoBlaze_Manual_ug129.pdf
+old files lab 3/LAB#3/template_de2/doublesync.v
+old files lab 3/LAB#3/template_de2/incremental_db/README
+old files lab 3/LAB#3/template_de2/pacoblaze/addsub.v
+old files lab 3/LAB#3/template_de2/pacoblaze/addsub_tb.v
+old files lab 3/LAB#3/template_de2/pacoblaze/blockram.v
+old files lab 3/LAB#3/template_de2/pacoblaze/cmprnd3_tb.v
+old files lab 3/LAB#3/template_de2/pacoblaze/compare3_tb.v
+old files lab 3/LAB#3/template_de2/pacoblaze/compare3m_tb.v
+old files lab 3/LAB#3/template_de2/pacoblaze/int_test.v
+old files lab 3/LAB#3/template_de2/pacoblaze/Makefile
+old files lab 3/LAB#3/template_de2/pacoblaze/pacoblaze.v
+old files lab 3/LAB#3/template_de2/pacoblaze/pacoblaze1.v
+old files lab 3/LAB#3/template_de2/pacoblaze/pacoblaze1_tb.v
+old files lab 3/LAB#3/template_de2/pacoblaze/pacoblaze2.v
+old files lab 3/LAB#3/template_de2/pacoblaze/pacoblaze3.v
+old files lab 3/LAB#3/template_de2/pacoblaze/pacoblaze3_tb.v
+old files lab 3/LAB#3/template_de2/pacoblaze/pacoblaze3b_tb.v
+old files lab 3/LAB#3/template_de2/pacoblaze/pacoblaze3m.v
+old files lab 3/LAB#3/template_de2/pacoblaze/pacoblaze3m_tb.v
+old files lab 3/LAB#3/template_de2/pacoblaze/pacoblaze_alu.v
+old files lab 3/LAB#3/template_de2/pacoblaze/pacoblaze_dregister.v
+old files lab 3/LAB#3/template_de2/pacoblaze/pacoblaze_dregister_tb.v
+old files lab 3/LAB#3/template_de2/pacoblaze/pacoblaze_idu.v
+old files lab 3/LAB#3/template_de2/pacoblaze/pacoblaze_idu_tb.v
+old files lab 3/LAB#3/template_de2/pacoblaze/pacoblaze_inc.v
+old files lab 3/LAB#3/template_de2/pacoblaze/pacoblaze_register.v
+old files lab 3/LAB#3/template_de2/pacoblaze/pacoblaze_scratch.v
+old files lab 3/LAB#3/template_de2/pacoblaze/pacoblaze_stack.v
+old files lab 3/LAB#3/template_de2/pacoblaze/pacoblaze_util.v
+old files lab 3/LAB#3/template_de2/pacoblaze/test.v
+old files lab 3/LAB#3/template_de2/pacoblaze/testall.sh
+old files lab 3/LAB#3/template_de2/pacoblaze/timescale_inc.v
+old files lab 3/LAB#3/template_de2/pacoblaze/uclock.v
+old files lab 3/LAB#3/template_de2/pacoblaze/uclock_ti.v
+old files lab 3/LAB#3/template_de2/pacoblaze_instruction_memory.v
+old files lab 3/LAB#3/template_de2/Picoblaze_Practice.qpf
+old files lab 3/LAB#3/template_de2/Picoblaze_Practice.v
+old files lab 3/LAB#3/template_de2/Picoblaze_Practice_assignment_defaults.qdf
+old files lab 3/LAB#3/template_de2/picoblaze_template.v
+old files lab 3/LAB#3/template_de2/PRACPICO.MEM
+old files lab 3/LAB#3/template_de2/timing_constraints.sdc
+old files lab 3/LAB3_ASS/abs_val.sv
+old files lab 3/LAB3_ASS/abs_val_tb.sv
+old files lab 3/LAB3_ASS/divider.asm
+old files lab 3/LAB3_ASS/lab3.asm
+old files lab 3/LAB3_ASS/LAB3.qpf
+old files lab 3/LAB3_ASS/LAB3.sv
+old files lab 3/LAB3_ASS/LCDcode.asm
+old files lab 3/LAB3_ASS/pracPICO.asm
+old files lab 3/LAB3_ASS/pracPICO.psm
+old files lab 3/LAB3_ASS/work/_info
+old files lab 3/LAB3_ASS/work/_vmake
+old files lab 3/template_de1soc/check_speed_sig.sv
+old files lab 3/template_de1soc/db/ip/sldcdeaedfc/alt_sld_fab.sopcinfo
+old files lab 3/template_de1soc/db/ip/sldcdeaedfc/alt_sld_fab.v
+old files lab 3/template_de1soc/db/ip/sldcdeaedfc/submodules/alt_sld_fab_ident.sv
+old files lab 3/template_de1soc/db/ip/sldcdeaedfc/submodules/alt_sld_fab_presplit.sv
+old files lab 3/template_de1soc/db/ip/sldcdeaedfc/submodules/alt_sld_fab_sldfabric.vhd
+old files lab 3/template_de1soc/db/ip/sldcdeaedfc/submodules/alt_sld_fab_splitter.sv
+old files lab 3/template_de1soc/db/lcd_scope_auto_stripped.stp
+old files lab 3/template_de1soc/db/simple_ipod_solution_tmp_qic_import/qic_export_file_list
+old files lab 3/template_de1soc/doublesync.v
+old files lab 3/template_de1soc/edge detector/FDC.SV
+old files lab 3/template_de1soc/edge detector/Generate_Arbitrary_Divided_Clk32.v
+old files lab 3/template_de1soc/edge detector/HW1Q7.sv
+old files lab 3/template_de1soc/edge detector/HW1Q7_TB.sv
+old files lab 3/template_de1soc/edge detector/Synchronizer-techniques-for-multi-clock-domain-SoCs.pdf
+old files lab 3/template_de1soc/edge detector/work/_info
+old files lab 3/template_de1soc/edge detector/work/_vmake
+old files lab 3/template_de1soc/edge_detect.sv
+old files lab 3/template_de1soc/FDC.SV
+old files lab 3/template_de1soc/Generate_Arbitrary_Divided_Clk32.sv
+old files lab 3/template_de1soc/incremental_db/README
+old files lab 3/template_de1soc/Kbd_ctrl.v
+old files lab 3/template_de1soc/kcpsm3.v
+old files lab 3/template_de1soc/key2ascii.v
+old files lab 3/template_de1soc/key_moderator.sv
+old files lab 3/template_de1soc/lcd_scope.stp
+old files lab 3/template_de1soc/LCD_Scope_Encapsulated_pacoblaze_wrapper.v
+old files lab 3/template_de1soc/pacoblaze/addsub.v
+old files lab 3/template_de1soc/pacoblaze/addsub_tb.v
+old files lab 3/template_de1soc/pacoblaze/blockram.v
+old files lab 3/template_de1soc/pacoblaze/cmprnd3_tb.v
+old files lab 3/template_de1soc/pacoblaze/compare3_tb.v
+old files lab 3/template_de1soc/pacoblaze/compare3m_tb.v
+old files lab 3/template_de1soc/pacoblaze/int_test.v
+old files lab 3/template_de1soc/pacoblaze/Makefile
+old files lab 3/template_de1soc/pacoblaze/pacoblaze.v
+old files lab 3/template_de1soc/pacoblaze/pacoblaze1.v
+old files lab 3/template_de1soc/pacoblaze/pacoblaze1_tb.v
+old files lab 3/template_de1soc/pacoblaze/pacoblaze2.v
+old files lab 3/template_de1soc/pacoblaze/pacoblaze3.v
+old files lab 3/template_de1soc/pacoblaze/pacoblaze3_tb.v
+old files lab 3/template_de1soc/pacoblaze/pacoblaze3b_tb.v
+old files lab 3/template_de1soc/pacoblaze/pacoblaze3m.v
+old files lab 3/template_de1soc/pacoblaze/pacoblaze3m_tb.v
+old files lab 3/template_de1soc/pacoblaze/pacoblaze_alu.v
+old files lab 3/template_de1soc/pacoblaze/pacoblaze_dregister.v
+old files lab 3/template_de1soc/pacoblaze/pacoblaze_dregister_tb.v
+old files lab 3/template_de1soc/pacoblaze/pacoblaze_idu.v
+old files lab 3/template_de1soc/pacoblaze/pacoblaze_idu_tb.v
+old files lab 3/template_de1soc/pacoblaze/pacoblaze_inc.v
+old files lab 3/template_de1soc/pacoblaze/pacoblaze_register.v
+old files lab 3/template_de1soc/pacoblaze/pacoblaze_scratch.v
+old files lab 3/template_de1soc/pacoblaze/pacoblaze_stack.v
+old files lab 3/template_de1soc/pacoblaze/pacoblaze_util.v
+old files lab 3/template_de1soc/pacoblaze/test.v
+old files lab 3/template_de1soc/pacoblaze/testall.sh
+old files lab 3/template_de1soc/pacoblaze/timescale_inc.v
+old files lab 3/template_de1soc/pacoblaze/uclock.v
+old files lab 3/template_de1soc/pacoblaze/uclock_ti.v
+old files lab 3/template_de1soc/pacoblaze_instruction_memory.v
+old files lab 3/template_de1soc/pass_to_audio.sv
+old files lab 3/template_de1soc/Picoblaze_Practice.v
+old files lab 3/template_de1soc/picoblaze_template.v
+old files lab 3/template_de1soc/PRACPICO.MEM
+old files lab 3/template_de1soc/PRACPICO.V
+old files lab 3/template_de1soc/read_sm.sv
+old files lab 3/template_de1soc/simple_ipod_solution.pin
+old files lab 3/template_de1soc/simple_ipod_solution.qpf
+old files lab 3/template_de1soc/simple_ipod_solution.v
+old files lab 3/template_de1soc/speed_control.sv
+old files lab 3/template_de1soc/timing_constraints.sdc
+old files lab 3/template_de1soc/widereg.v
+old files lab 3/template_de1soc/Write_Kbd_To_LCD.v
+old files lab 3/template_de1soc/Write_Kbd_To_Scope_LCD.v
