--- a/.gitignore
+++ b/.gitignore
@@ -743,3 +743,132 @@ old files lab 3/template_de1soc/timing_constraints.sdc
 old files lab 3/template_de1soc/widereg.v
 old files lab 3/template_de1soc/Write_Kbd_To_LCD.v
 old files lab 3/template_de1soc/Write_Kbd_To_Scope_LCD.v
+old files lab 3/LAB#3/instruction_set.png
+old files lab 3/LAB#3/KCPSM3.zip
+old files lab 3/LAB#3/KCPSM3_Manual_Presentation.pdf
+old files lab 3/LAB#3/pacoblaze-2.2.zip
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/docs/pacoblaze.pdf
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/docs/picoblaze.pdf
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/Doxyfile
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/KCAsm.jar
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/AsmExpression.class
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/AsmExpression.java
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/Assembler.class
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/Assembler.java
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/Assembler1.class
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/Assembler1.java
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/Assembler2.class
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/Assembler2.java
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/Assembler3.class
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/Assembler3.java
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/Command.class
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/Command.java
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/Comment.class
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/Comment.java
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/Copy of Assembler.java
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/Environment.class
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/Environment.java
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/Instruction.class
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/Instruction.java
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/Instruction1.class
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/Instruction1.java
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/Instruction2.class
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/Instruction2.java
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/Instruction3.class
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/Instruction3.java
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/KCAsm$1.class
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/KCAsm$JJCalls.class
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/KCAsm$LookaheadSuccess.class
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/KCAsm.class
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/KCAsm.java
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/KCAsm.jj
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/kcasm/package-list
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/kcasm/resources/inherit.gif
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/kcasm/stylesheet.css
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/KCAsmConstants.class
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/KCAsmConstants.java
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/KCAsmTokenManager.class
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/KCAsmTokenManager.java
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/Label.class
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/Label.java
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/Makefile
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/MANIFEST.MF
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/ParseException.class
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/ParseException.java
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/SimpleCharStream.class
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/SimpleCharStream.java
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/Symbol$Type.class
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/Symbol.class
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/Symbol.java
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/Token.class
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/Token.java
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/TokenMgrError.class
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/kcasm/TokenMgrError.java
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/addsub.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/addsub_tb.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/blockram.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/cmprnd3_tb.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/compare3_tb.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/compare3m_tb.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/int_test.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/Makefile
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/addsub.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/addsub_tb.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/blockram.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/cmprnd3_tb.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/compare3_tb.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/compare3m_tb.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/int_test.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/pacoblaze.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/pacoblaze1.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/pacoblaze1_idu_xst.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/pacoblaze1_tb.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/pacoblaze1_xst.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/pacoblaze2.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/pacoblaze2_idu_xst.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/pacoblaze2_xst.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/pacoblaze3.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/pacoblaze3_dregister_xst.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/pacoblaze3_idu_xst.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/pacoblaze3_tb.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/pacoblaze3_xst.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/pacoblaze3b_tb.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/pacoblaze3m.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/pacoblaze3m_tb.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/pacoblaze3m_xst.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/pacoblaze_alu.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/pacoblaze_dregister.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/pacoblaze_dregister_tb.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/pacoblaze_idu.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/pacoblaze_idu_tb.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/pacoblaze_inc.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/pacoblaze_register.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/pacoblaze_scratch.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/pacoblaze_stack.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/pacoblaze_util.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/test.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/timescale_inc.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/uclock.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/uclock_ti.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/v2html-b1.gif
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/v2html-b2.gif
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/v2html-b3.gif
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/v2html-c.gif
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/v2html-i.gif
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/v2html-up.gif
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/v2html-x.gif
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze/v2html.css
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze1.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze1_idu_xst.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze1_tb.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze1_xst.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze2.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze2_idu_xst.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze2_xst.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze3.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze3_dregister_xst.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze3_idu_xst.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze3_tb.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze3_xst.v
+old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze3b_tb.v
