--- a/.gitignore
+++ b/.gitignore
@@ -874,3 +874,4 @@ old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze3_xst.v
 old files lab 3/LAB#3/pacoblaze/pacoblaze-2.2/pacoblaze/pacoblaze3b_tb.v
 HW3/work/_vmake
 *.pin
+*.sopcinfo
